--- a/kubernetes/clusters/k2s/monitoring/kustomization.yaml
+++ b/kubernetes/clusters/k2s/monitoring/kustomization.yaml
@@ -7,6 +7,5 @@ resources:
   - ./namespace.yaml
   - ./externalsecret.yaml
   # Flux-Kustomizations
+  - ./loki/ks.yaml
   - ./victoria-metrics/ks.yaml
-  #- ./victoria-logs/ks.yaml
-
