--- a/kubernetes/clusters/k2s/kube-system/cilium/app/helmrelease.yaml
+++ b/kubernetes/clusters/k2s/kube-system/cilium/app/helmrelease.yaml
@@ -28,7 +28,7 @@ spec:
   values:
     autoDirectNodeRoutes: false
     enable-ipv4-masquerade: true
-    #policyAuditMode: true
+    policyAuditMode: true
     authentication:
       mutual:
         spire:
