--- a/kubernetes/clusters/k2s/media/ciliumnetworkpolicy.yaml
+++ b/kubernetes/clusters/k2s/media/ciliumnetworkpolicy.yaml
@@ -1,4 +1,3 @@
----
 apiVersion: cilium.io/v2
 kind: CiliumNetworkPolicy
 metadata:
@@ -7,6 +6,62 @@ metadata:
 spec:
   endpointSelector: {}
   ingress:
+    - fromEndpoints:
+        - matchLabels:
+            k8s:app.kubernetes.io/component: main
+            k8s:app.kubernetes.io/instance: immich-microservices
+            k8s:app.kubernetes.io/name: immich-microservices
+            k8s:io.cilium.k8s.namespace.labels.kubernetes.io/metadata.name: media
+            k8s:io.cilium.k8s.namespace.labels.kustomize.toolkit.fluxcd.io/name: cluster-apps
+            k8s:io.cilium.k8s.namespace.labels.kustomize.toolkit.fluxcd.io/namespace: flux-system
+            k8s:io.cilium.k8s.namespace.labels.kustomize.toolkit.fluxcd.io/prune: disabled
+            k8s:io.kubernetes.pod.namespace: media
+      toPorts:
+        - ports:
+            - port: "8108"
+    - fromEndpoints:
+        - matchLabels:
+            k8s:app.kubernetes.io/component: main
+            k8s:app.kubernetes.io/instance: immich-microservices
+            k8s:app.kubernetes.io/name: immich-microservices
+            k8s:io.cilium.k8s.namespace.labels.kubernetes.io/metadata.name: media
+            k8s:io.cilium.k8s.namespace.labels.kustomize.toolkit.fluxcd.io/name: cluster-apps
+            k8s:io.cilium.k8s.namespace.labels.kustomize.toolkit.fluxcd.io/namespace: flux-system
+            k8s:io.cilium.k8s.namespace.labels.kustomize.toolkit.fluxcd.io/prune: disabled
+            k8s:io.kubernetes.pod.namespace: media
+      toPorts:
+        - ports:
+            - port: "5432"
+    - fromEndpoints:
+        - matchLabels:
+            k8s:app.kubernetes.io/component: main
+            k8s:app.kubernetes.io/instance: immich-server
+            k8s:app.kubernetes.io/name: immich-server
+            k8s:io.cilium.k8s.namespace.labels.kubernetes.io/metadata.name: media
+            k8s:io.cilium.k8s.namespace.labels.kustomize.toolkit.fluxcd.io/name: cluster-apps
+            k8s:io.cilium.k8s.namespace.labels.kustomize.toolkit.fluxcd.io/namespace: flux-system
+            k8s:io.cilium.k8s.namespace.labels.kustomize.toolkit.fluxcd.io/prune: disabled
+            k8s:io.kubernetes.pod.namespace: media
+      toPorts:
+        - ports:
+            - port: "8108"
+    - fromEndpoints:
+        - matchLabels:
+            k8s:app.kubernetes.io/component: controller
+            k8s:app.kubernetes.io/instance: nginx
+            k8s:app.kubernetes.io/managed-by: Helm
+            k8s:app.kubernetes.io/name: ingress-nginx
+            k8s:app.kubernetes.io/part-of: ingress-nginx
+            k8s:app.kubernetes.io/version: 1.9.4
+            k8s:helm.sh/chart: ingress-nginx-4.8.3
+            k8s:io.cilium.k8s.namespace.labels.kubernetes.io/metadata.name: ingress
+            k8s:io.cilium.k8s.namespace.labels.kustomize.toolkit.fluxcd.io/name: cluster-apps
+            k8s:io.cilium.k8s.namespace.labels.kustomize.toolkit.fluxcd.io/namespace: flux-system
+            k8s:io.cilium.k8s.namespace.labels.kustomize.toolkit.fluxcd.io/prune: disabled
+            k8s:io.kubernetes.pod.namespace: ingress
+      toPorts:
+        - ports:
+            - port: "3001"
     - fromEndpoints:
         - matchLabels:
             k8s:app.kubernetes.io/component: monitoring
@@ -33,37 +88,7 @@ spec:
             k8s:io.kubernetes.pod.namespace: media
       toPorts:
         - ports:
-            - port: "8108"
-    - fromEndpoints:
-        - matchLabels:
-            k8s:app.kubernetes.io/component: main
-            k8s:app.kubernetes.io/instance: immich-server
-            k8s:app.kubernetes.io/name: immich-server
-            k8s:io.cilium.k8s.namespace.labels.kubernetes.io/metadata.name: media
-            k8s:io.cilium.k8s.namespace.labels.kustomize.toolkit.fluxcd.io/name: cluster-apps
-            k8s:io.cilium.k8s.namespace.labels.kustomize.toolkit.fluxcd.io/namespace: flux-system
-            k8s:io.cilium.k8s.namespace.labels.kustomize.toolkit.fluxcd.io/prune: disabled
-            k8s:io.kubernetes.pod.namespace: media
-      toPorts:
-        - ports:
             - port: "5432"
-    - fromEndpoints:
-        - matchLabels:
-            k8s:app.kubernetes.io/component: controller
-            k8s:app.kubernetes.io/instance: nginx
-            k8s:app.kubernetes.io/managed-by: Helm
-            k8s:app.kubernetes.io/name: ingress-nginx
-            k8s:app.kubernetes.io/part-of: ingress-nginx
-            k8s:app.kubernetes.io/version: 1.9.4
-            k8s:helm.sh/chart: ingress-nginx-4.8.3
-            k8s:io.cilium.k8s.namespace.labels.kubernetes.io/metadata.name: ingress
-            k8s:io.cilium.k8s.namespace.labels.kustomize.toolkit.fluxcd.io/name: cluster-apps
-            k8s:io.cilium.k8s.namespace.labels.kustomize.toolkit.fluxcd.io/namespace: flux-system
-            k8s:io.cilium.k8s.namespace.labels.kustomize.toolkit.fluxcd.io/prune: disabled
-            k8s:io.kubernetes.pod.namespace: ingress
-      toPorts:
-        - ports:
-            - port: "3001"
   egress:
     - toEndpoints:
         - matchLabels:
@@ -85,22 +110,17 @@ spec:
             - port: "6379"
     - toEndpoints:
         - matchLabels:
-            k8s:app.kubernetes.io/component: node
-            k8s:app.kubernetes.io/instance: redis
-            k8s:app.kubernetes.io/managed-by: Helm
-            k8s:app.kubernetes.io/name: redis
-            k8s:app.kubernetes.io/version: 7.2.3
-            k8s:apps.kubernetes.io/pod-index: "0"
-            k8s:helm.sh/chart: redis-18.4.0
-            k8s:io.cilium.k8s.namespace.labels.kubernetes.io/metadata.name: database
+            k8s:app.kubernetes.io/component: main
+            k8s:app.kubernetes.io/instance: immich-machine-learning
+            k8s:app.kubernetes.io/name: immich-machine-learning
+            k8s:io.cilium.k8s.namespace.labels.kubernetes.io/metadata.name: media
             k8s:io.cilium.k8s.namespace.labels.kustomize.toolkit.fluxcd.io/name: cluster-apps
             k8s:io.cilium.k8s.namespace.labels.kustomize.toolkit.fluxcd.io/namespace: flux-system
             k8s:io.cilium.k8s.namespace.labels.kustomize.toolkit.fluxcd.io/prune: disabled
-            k8s:io.kubernetes.pod.namespace: database
-            k8s:statefulset.kubernetes.io/pod-name: redis-node-0
+            k8s:io.kubernetes.pod.namespace: media
       toPorts:
         - ports:
-            - port: "6379"
+            - port: "3003"
     - toEndpoints:
         - matchLabels:
             k8s:app.kubernetes.io/component: main
