--- a/kubernetes/clusters/k0s/kube-system/cilium/app/helmrelease.yaml
+++ b/kubernetes/clusters/k0s/kube-system/cilium/app/helmrelease.yaml
@@ -178,7 +178,7 @@ spec:
           - flow
           - icmp
           - port-distribution
-          - httpV2:exemplars=true;labelsContext=source_ip
+          - httpV2
           #- policy:sourceContext=app|workload-name|pod|reserved-identity;destinationContext=app|workload-name|pod|dns|reserved-identity;labelsContext=source_namespace,destination_namespace
           #- httpV2:exemplars=true;labelsContext=source_ip
           # - source_namespace
