--- a/kubernetes/clusters/main/home-automation/home-assistant/app/networkpolicy.yaml
+++ b/kubernetes/clusters/main/home-automation/home-assistant/app/networkpolicy.yaml
@@ -12,7 +12,9 @@ spec:
     # emqx
     - toEndpoints:
         - matchLabels:
-            app.kubernetes.io/name: emqx
+            k8s:app.kubernetes.io/instance: emqx
+            k8s:app.kubernetes.io/name: emqx
+            k8s:io.kubernetes.pod.namespace: database
       authentication:
         mode: required
       toPorts:
