--- a/kubernetes/clusters/main/home-automation/home-assistant/app/networkpolicy.yaml
+++ b/kubernetes/clusters/main/home-automation/home-assistant/app/networkpolicy.yaml
@@ -7,7 +7,7 @@ metadata:
 spec:
   endpointSelector:
     matchLabels:
-      app.kubernetes.io/name: home-assistant
+      k8s:app.kubernetes.io/name: home-assistant
   egress:
     # emqx
     - toEndpoints:
